fix picture full screen on mobile

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,6 @@ ul {
 	font-family: MarkPro;
 	font-size:18px;
 	width: 100%;
-	margin-bottom: 290px;
 }
 
 .article_body {
@@ -407,10 +406,11 @@ ul {
     	margin-bottom: 32%;
     }
 
-    /*.main_img {
+    .main_img {
 		margin-left:0%;
 		margin-right:0%;
-	}*/
+		width:100%;
+	}
 
 }
 
